--- a/app.json
+++ b/app.json
@@ -31,6 +31,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "27654719-c8dc-4184-8117-631921290f8c"
+      }
     }
   }
 }
